--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # Ignore all JSON files recursively
 **/*.json 
 
+# Allow specifically
+!results/*.json
+!tests/*.json
+
 # Ignore service accounts or secrets
 .env
 service_account.json
